<?xml version="1.0"?>
<package>
  <name>self_drive_in_furrow</name>
  <version>0.0.0</version>
  <description>self_drive_in_furrow package</description>

  <author email="hyunwoo745@naver.com">Hyunwoo Lee</author>

  <maintainer email="hyunwoo745@naver.com">Hyunwoo Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
